Include description, improve CSS loading liquid tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     </title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/tom.css">
+    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}public/css/tom.css">
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css" type="text/css" charset="utf-8"/>
